--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,12 @@
 body{
     background: #302e2b;
-    justify-content: center;
-    gap: 2vw;
 }
 
 #root{
     display: flex;
     flex-direction: column;
     width: fit-content;
-    /* margin: auto; */
+    margin: auto;
 }
 .squareRow{
     display: flex;
@@ -47,27 +45,37 @@ body{
 .highlightYellow{
    background-color: #f7f769;
 }
-
-.labelId{
-    position : absolute;
-    font-family: sans-serif;
-    font-size:x-small;
-    font-style: bold;
-    font-weight: 600;
-    left: 2px;
-    top: 1px;
-}
-.white-label-id{
-     color: #6c8158;
-}
-.black-label-id{
-    color : #eeeed2;
-}
-.d-flex{
+.modal {
     display: flex;
-}
-#move_logger{
-    width: 20vw;
-    height: 600px;
-    background-color: #262522;
-}
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+  }
+  
+  .blur{
+    filter: blur(20px);
+  }
+  
+  .modal p{
+    font-family: sans-serif;
+    font-size: 35px;
+    padding: 4px 8px;
+    background-color: red;
+    color: white;
+  }
+  
+  .modal img{
+    box-sizing: border-box;
+    border: 5px solid transparent;
+    width: 24%;
+  }
+  
+  .modal img:hover{
+    border: 5px solid yellow;
+    cursor: pointer;
+  }
